--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ a {
 
 .nav {
     background-color: rgba(0, 0, 0, 0);
+    -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(8px);
     border-bottom: solid 1px rgba(255, 255, 255, 0.25);
     padding-top: 15px;
